Add durable tests for JPA with PostgreSQL (#380)
* Add durable tests for JPA with PostgreSQL

Signed-off-by: Matheus Cruz <matheuscruz.dev@gmail.com>

* Rename MySQL to PostgreSQL

Signed-off-by: Matheus Cruz <matheuscruz.dev@gmail.com>

* Apply suggestion from @ricardozanini

Co-authored-by: Ricardo Zanini <1538000+ricardozanini@users.noreply.github.com>

* Rename PostgreSQLDurableListenWorkflowIT to JPADurableListenWorkflowIT

Signed-off-by: Matheus Cruz <matheuscruz.dev@gmail.com>

---------

Signed-off-by: Matheus Cruz <matheuscruz.dev@gmail.com>
Co-authored-by: Ricardo Zanini <1538000+ricardozanini@users.noreply.github.com>